# patrolify

./: .bumpversion.cfg  .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: release.yaml
contrib/: link_check.py  weather.py
contrib/bar/: dummy.py  example.py
contrib/foo/: cert_checker.py
docs/: how-to-write-checker.md
patrolify/: __init__.py  consts.py  decorators.py  exceptions.py  globals.py  main.py  queue_jobs.py  reports.py  target.py  utils.py  version.py
patrolify/admin/: __init__.py  admin_api.py  server.py
patrolify/admin/web/: index.html
patrolify/admin/web/src/: App.css  CheckerDetailPage.css  CheckerDetailPage.jsx  CheckerLayout.css  CheckerLayout.jsx  JobAllStatusSpan.jsx  Navbar.jsx  main.jsx  version.jsx
patrolify/admin/web/src/fileexplorer/: fileexplorer.css  index.jsx
patrolify/admin/web/src/homepage/: HomePage.css  HomePage.jsx  MonitorStatus.css  MonitorStatus.jsx
reporter/: __init__.py  consts.py  decorators.py  exceptions.py  globals.py  main.py  queue_jobs.py  reports.py  target.py
reporter/admin/: admin_api.py  server.py
reporter/admin/web/: README.md  index.html  package.json  vite.config.js
reporter/admin/web/public/: index.html
reporter/admin/web/src/: App.css  App.js  App.jsx  CheckDetailPage.jsx  CheckerDetailPage.css  CheckerDetailPage.jsx  CheckerLayout.jsx  HomePage.css  HomePage.jsx  JobDetailPage.css  JobDetailPage.jsx  Navbar.jsx  main.jsx
reporter/admin/web/src/homepage/: HomePage.css  HomePage.jsx  MonitorStatus.css  MonitorStatus.jsx
reporter/templates/: report.html
