[tool.poetry]
name = "reporter"
version = "0.1.0"
description = ""
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rq = "^1.15.1"
rq-scheduler = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reporter = 'reporter.main:main'
